--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,27 @@ atlassian*
 .editorconfig
 .htaccess
 .htaccess.sample
+.php_cs.dist
+.user.ini
+CHANGELOG.md
+COPYING.txt
+Gruntfile.js.sample
+LICENSE.txt
+LICENSE_AFL.txt
+SECURITY.md
+auth.json.sample
+bin/
+dev/
+grunt-config.json.sample
+lib/
+nginx.conf.sample
+package.json.sample
+phpserver/
+pub/
+setup/
+app/autoload.php
+app/bootstrap.php
+app/etc/NonComposerComponentRegistration.php
+app/etc/registration_globlist.php
+app/etc/vendor_path.php
+app/etc/db_schema.xml
