Changes in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ app/etc/NonComposerComponentRegistration.php
 app/etc/registration_globlist.php
 app/etc/vendor_path.php
 app/etc/db_schema.xml
+app/etc/di.xml
